--- a/portfolio.html
+++ b/portfolio.html
@@ -83,26 +83,46 @@
           <ul class="project-list list">
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/technokryak.jpg"
-                  alt="Ноутбук з фото людей"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/technokryak.jpg"
+                    alt="Ноутбук з фото людей"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Технокряк</h2>
                   <p class="product">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="item">
+            <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/poster-orlean-g-star.jpg"
-                  alt="Два баскетболісти"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/poster-orlean-g-star.jpg"
+                    alt="Два баскетболісти"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Постер New Orlean vs Golden Star</h2>
                   <p class="product">Дизайн</p>
@@ -111,12 +131,22 @@
             </li>
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/restaurant-seafood.jpg  "
-                  alt="Риба з надписом"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/restaurant-seafood.jpg  "
+                    alt="Риба з надписом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Ресторан Seafood</h2>
                   <p class="product">Додаток</p>
@@ -125,12 +155,22 @@
             </li>
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/project-prime.jpg"
-                  alt="Навушники"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/project-prime.jpg"
+                    alt="Навушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Проєкт Prime</h2>
                   <p class="product">Маркетинг</p>
@@ -139,12 +179,22 @@
             </li>
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/project-boxes.jpg"
-                  alt="Біла і коричнева коробка"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/project-boxes.jpg"
+                    alt="Біла і коричнева коробка"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Проєкт Boxes</h2>
                   <p class="product">Додаток</p>
@@ -153,12 +203,22 @@
             </li>
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/inspiration.jpg"
-                  alt="Монітор комп'ютера"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/inspiration.jpg"
+                    alt="Монітор комп'ютера"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Inspiration has no Borders</h2>
                   <p class="product">Веб-сайт</p>
@@ -167,12 +227,22 @@
             </li>
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/limit-edition.jpg"
-                  alt="Розгортка журналу"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/limit-edition.jpg"
+                    alt="Розгортка журналу"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Видання Limited Edition</h2>
                   <p class="product">Дизайн</p>
@@ -181,12 +251,22 @@
             </li>
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/project-lab.jpg"
-                  alt="Брелок з надписом"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/project-lab.jpg"
+                    alt="Брелок з надписом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Проєкт LAB</h2>
                   <p class="product">Маркетинг</p>
@@ -195,12 +275,22 @@
             </li>
             <li class="project-item">
               <a href="#" class="project-link"
-                ><img
-                  src="./images/growing-business.jpg"
-                  alt="Ноутбук на столі"
-                  width="370"
-                  height="294"
-                />
+                ><div class="project-thumb">
+                  <img
+                    src="./images/growing-business.jpg"
+                    alt="Ноутбук на столі"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="project-overlay">
+                    <p class="overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="description">
                   <h2 class="tittle">Growing Business</h2>
                   <p class="product">Додаток</p>
